# unreal_ant

./: .gitignore  .gitmodules  LICENSE.md  Readme.md
Plugins/AntPlusPlugin/ant_desktop/: CMakeLists.txt  ant_receive_ch.cpp  ant_receive_ch.h  ant_receive_defines.h  ue5_lib.cpp  ue5_lib.h
Plugins/AntPlusPlugin/ant_desktop/ANT-SDK_PC.3.5/ANT_LIB/: CMakeLists.txt
Plugins/AntPlusPlugin/ant_desktop/ANT-SDK_PC.3.5/ANT_LIB/common/: checksum.c  checksum.h  crc.c  crc.h
Plugins/AntPlusPlugin/ant_desktop/ANT-SDK_PC.3.5/ANT_LIB/inc/: antdefines.h  antmessage.h  build_version.h  defines.h  types.h  version.h
Plugins/AntPlusPlugin/ant_desktop/ANT-SDK_PC.3.5/ANT_LIB/libraries/: DSI_CP210xManufacturingDLL_3_1.h  DSI_SiUSBXp_3_1.h  dsi_cm_library.cpp  dsi_cm_library.hpp  dsi_libusb_library.cpp  dsi_libusb_library.hpp  dsi_silabs_library.cpp  dsi_silabs_library.hpp  usb.h
Plugins/AntPlusPlugin/ant_desktop/ANT-SDK_PC.3.5/ANT_LIB/software/USB/: usb_device_list.hpp  usb_device_list_template.hpp  usb_standard_types.hpp
Plugins/AntPlusPlugin/ant_desktop/ANT-SDK_PC.3.5/ANT_LIB/software/USB/device_handles/: usb_device_handle.hpp  usb_device_handle_libusb.cpp  usb_device_handle_libusb.hpp  usb_device_handle_si.cpp  usb_device_handle_si.hpp  usb_device_handle_win.cpp
Plugins/AntPlusPlugin/ant_desktop/ANT-SDK_PC.3.5/ANT_LIB/software/USB/devices/: usb_device.cpp  usb_device.hpp  usb_device_libusb.cpp  usb_device_libusb.hpp  usb_device_si.cpp  usb_device_si.hpp
Plugins/AntPlusPlugin/ant_desktop/ANT-SDK_PC.3.5/ANT_LIB/software/serial/: WinDevice.cpp  WinDevice.h  dsi_framer.cpp  dsi_framer.hpp  dsi_framer_ant.cpp  dsi_framer_ant.hpp  dsi_framer_integrated_antfs_client.cpp  dsi_serial.cpp  dsi_serial.hpp  dsi_serial_callback.hpp  dsi_serial_generic.cpp  dsi_serial_generic.hpp  dsi_serial_libusb.cpp  dsi_serial_libusb.hpp  dsi_serial_si.cpp  dsi_serial_si.hpp  dsi_serial_vcp.cpp  dsi_serial_vcp.hpp
Plugins/AntPlusPlugin/ant_desktop/ANT-SDK_PC.3.5/ANT_LIB/software/serial/device_management/: dsi_ant_device.cpp  dsi_ant_device.hpp  dsi_ant_device_polling.cpp  dsi_ant_device_polling.hpp  dsi_response_queue.hpp  (+1 more)
Plugins/AntPlusPlugin/ant_desktop/ANT-SDK_PC.3.5/ANT_LIB/software/system/: dsi_convert.c  dsi_convert.h  dsi_debug.cpp  dsi_debug.hpp  dsi_thread.h  dsi_thread_win32.c  dsi_timer.cpp  dsi_timer.hpp  dsi_ts_queue.hpp  macros.c  macros.h
(+6 files in other folders)
